deployment/ingress/gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: user-app-service
            port:
              number: 80
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: user-app-service
            port:
              number: 80
      - pathType: Prefix
        path: /sellers
        backend:
          service:
            name: seller-app-service
            port:
              number: 80
      - pathType: Prefix
        path: /customers
        backend:
          service:
            name: customer-app-service
            port:
              number: 80
      - pathType: Prefix
        path: /producers
        backend:
          service:
            name: producer-app-service
            port:
              number: 80
      - pathType: Prefix
        path: /products
        backend:
          service:
            name: product-app-service
            port:
              number: 80
      - pathType: Prefix
        path: /orders
        backend:
          service:
            name: order-app-service
            port:
              number: 80
